--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "Apache 2.0",
   "main": "index.js",
   "peerDependencies": {
-    "mongoose": "6.x"
+    "mongoose": "^6.x"
   },
   "repository": {
     "type": "git",
